# EdgeWatch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  GITHUB_PUBLISHING.md  INSTALL.md  LICENSE  OPERATIONS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SANITIZATION.md  SECURITY.md  SECURITY_POLICY.md  SUPPORT.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  UPGRADE.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: Caddyfile.example  config.toml  edgewatch-agent.service  edgewatch-geoip-update.service  edgewatch-geoip-update.timer  edgewatch-monitor-users.service  edgewatch-web.service  oauth2-proxy.cfg.example  secrets.toml.example  site.toml.example
docs/: ACKNOWLEDGED_FINDINGS.md
edgewatch/: __init__.py  agent.py  collector.py  config.py  control.py  correlation.py  geoip.py  linode.py  monitor_users.py  notifications.py  parsers.py  plex.py  serve.py  storage.py  web.py
edgewatch/static/: app.css  (+3 more)
scripts/: backup.sh  configure-geoip.sh  discover-identity.py  edgewatch-ctl.sh  install.sh  uninstall.sh  verify-units.sh
tests/: test_collector_contract.py  test_config_and_risk.py  test_connection_intelligence.py  test_control.py  test_correlation.py  test_distribution_sanitization.py  test_frontend.py  test_frontend_logic.py  test_identity_metadata.py  test_integrations.py  test_monitor_users.py  test_parsers.py  test_plex.py  test_site_config.py  test_storage.py  test_web_controls.py
(+1 files in other folders)
