[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgewatch"
version = "0.5.5"
description = "Network traffic, security monitoring, and acknowledged finding controls for an Ubuntu VPS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
  {name = "EdgeWatch contributors"},
]
keywords = ["monitoring", "security", "wireguard", "plex", "ubuntu"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastapi==0.139.2",
  "uvicorn==0.51.0",
  "maxminddb==3.1.1",
  "tomli==2.4.1; python_version < '3.11'",
]

[project.scripts]
edgewatch-agent = "edgewatch.agent:main"
edgewatch-web = "edgewatch.serve:main"

[tool.setuptools.packages.find]
include = ["edgewatch*"]

[tool.setuptools.package-data]
edgewatch = ["static/**/*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
